[package]
authors = ["Tobin Yehle <tobinyehle@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "hello-bluefruit"
version = "0.1.0"

[dependencies]
atsamd-hal = { version="0.8", features=["samd21g18a", "samd21g18a-rt", "usb"] }
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
embedded-hal = "0.2"
feather_m0 = { version="0.6", features=[] }
heapless ="0.5"
panic-halt = "0.2.0"
usb-device = "0.2"
usbd-serial = "0.1"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "hello-bluefruit"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
